--- a/Ratala-POS-System-Web/frontend/index.html
+++ b/Ratala-POS-System-Web/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="image/png" href="/dautari-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hoteru- Restaurant Management Platform</title>
+    <title>Dautari Adda - POS System</title>
   </head>
   <body>
     <div id="root"></div>
