--- a/Ratala-POS-System-Web/frontend/index.html
+++ b/Ratala-POS-System-Web/frontend/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/Ratala Hospitality Logo.jpg" />
+<link rel="icon" type="image/png" sizes="64x64" href="assets/icon.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>Ratala Hospitality - Premium Restaurant Management App</title>
+    <title>Ratala Hospitality</title>
     <meta name="title" content="Ratala Hospitality - Premium Restaurant Management App" />
     <meta name="description" content="Ratala Hospitality is an all-in-one restaurant management platform featuring POS, inventory tracking, and staff management to streamline your hospitality business." />
     <meta name="keywords" content="restaurant management, POS system, hospitality software, inventory management, restaurant automation, Ratala Hospitality, kitchen management, table management" />
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://ratala.com/" />
     <meta property="og:title" content="Ratala Hospitality - Premium Restaurant Management App" />
     <meta property="og:description" content="Streamline your restaurant operations with Ratala Hospitality. The ultimate digital business management platform for modern restaurants." />
-    <meta property="og:image" content="/Ratala Hospitality Logo.jpg" />
+    <meta property="og:image" content="/Ratala Hospitality icon.jpeg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
