--- a/Ratala-POS-System-Web/frontend/index.html
+++ b/Ratala-POS-System-Web/frontend/index.html
@@ -1,38 +1,45 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-<link rel="icon" type="image/png" sizes="64x64" href="assets/icon.jpeg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <!-- Primary Meta Tags -->
-    <title>Ratala Hospitality</title>
-    <meta name="title" content="Ratala Hospitality - Premium Restaurant Management App" />
-    <meta name="description" content="Ratala Hospitality is an all-in-one restaurant management platform featuring POS, inventory tracking, and staff management to streamline your hospitality business." />
-    <meta name="keywords" content="restaurant management, POS system, hospitality software, inventory management, restaurant automation, Ratala Hospitality, kitchen management, table management" />
-    <meta name="author" content="Ratala Hospitality" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ratala.com/" />
-    <meta property="og:title" content="Ratala Hospitality - Premium Restaurant Management App" />
-    <meta property="og:description" content="Streamline your restaurant operations with Ratala Hospitality. The ultimate digital business management platform for modern restaurants." />
-    <meta property="og:image" content="/Ratala Hospitality icon.jpeg" />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/jpeg" href="/Ratala%20Hospitality%20Logo.jpg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://ratala.com/" />
-    <meta property="twitter:title" content="Ratala Hospitality - Premium Restaurant Management App" />
-    <meta property="twitter:description" content="Streamline your restaurant operations with Ratala Hospitality. The ultimate digital business management platform." />
-    <meta property="twitter:image" content="/Ratala Hospitality Logo.jpg" />
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-  </head>
-  <body style="font-family: 'Inter', sans-serif;">
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- Primary Meta Tags -->
+  <title>Ratala Hospitality</title>
+  <meta name="title" content="Ratala Hospitality - Premium Restaurant Management App" />
+  <meta name="description"
+    content="Ratala Hospitality is an all-in-one restaurant management platform featuring POS, inventory tracking, and staff management to streamline your hospitality business." />
+  <meta name="keywords"
+    content="restaurant management, POS system, hospitality software, inventory management, restaurant automation, Ratala Hospitality, kitchen management, table management" />
+  <meta name="author" content="Ratala Hospitality" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ratala.com/" />
+  <meta property="og:title" content="Ratala Hospitality - Premium Restaurant Management App" />
+  <meta property="og:description"
+    content="Streamline your restaurant operations with Ratala Hospitality. The ultimate digital business management platform for modern restaurants." />
+  <meta property="og:image" content="/Ratala%20Hospitality%20Logo.jpg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://ratala.com/" />
+  <meta property="twitter:title" content="Ratala Hospitality - Premium Restaurant Management App" />
+  <meta property="twitter:description"
+    content="Streamline your restaurant operations with Ratala Hospitality. The ultimate digital business management platform." />
+  <meta property="twitter:image" content="/Ratala%20Hospitality%20Logo.jpg" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+</head>
+
+<body style="font-family: 'Inter', sans-serif;">
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
-
