--- a/Ratala-POS-System-Web/frontend/index.html
+++ b/Ratala-POS-System-Web/frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/jpeg" href="/Ratala%20Hospitality%20Logo.jpg" />
+  <link rel="icon" type="image/jpeg" href="/Ratala%20Hospitality%20Logo1.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
